force-app/main/default/objects/In_Transit_Item__c/In_Transit_Item__c.object-meta.xml
<CustomObject>
    <label>In Transit Item</label>
    <nameField>
        <displayFormat>Its-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In Transit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>