force-app/main/default/objects/In_Transit_Item__c/fields/Exp_Delv_Date__c.field-meta.xml
<CustomField>
    <fullName>Exp_Delv_Date__c</fullName>
    <label>Exp Delv Date</label>
    <type>Date</type>
</CustomField>