force-app/main/default/objects/In_Transit_Item__c/fields/HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>HSN_Code__c</fullName>
    <formula>Product__r.HSN_Code__c</formula>
    <label>HSN Code</label>
    <type>Text</type>
</CustomField>