force-app/main/default/objects/In_Transit_Item__c/fields/In_Transit_qty__c.field-meta.xml
<CustomField>
    <fullName>In_Transit_qty__c</fullName>
    <label>In-Transit qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>