force-app/main/default/objects/In_Transit_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>In Transit Items</relationshipLabel>
    <relationshipName>In_Transit_Items</relationshipName>
    <type>Lookup</type>
</CustomField>