force-app/main/default/objects/In_Transit_Item__c/fields/Sku_Name__c.field-meta.xml
<CustomField>
    <fullName>Sku_Name__c</fullName>
    <formula>Product__r.Sku_Name__c</formula>
    <label>Sku Name</label>
    <type>Text</type>
</CustomField>