force-app/main/default/objects/In_Transit_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>In Transit Items</relationshipLabel>
    <relationshipName>In_Transit_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>